responsive new link

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ table tr td {
 				<tr><td><a href="http://hiropo.co.uk/" target="_blank"><img src="images/title_hiropocouk.png" alt="ひろぽっぽれす"></a></td></tr>
 			</table>
 			<table class="flickCol" id="mediaqueries">
-				<tr><td><a href="http://tpl.funnythingz.com/" target="_blank"><img src="images/title_mediaqueries.png" alt="MediaQueries Multi-Device Template."></a></td></tr>
+				<tr><td><a href="http://www.funnythingz.com/responsive/" target="_blank"><img src="images/title_mediaqueries.png" alt="MediaQueries Multi-Device Template."></a></td></tr>
 			</table>
 			<table class="flickCol" id="makingmachinez">
 				<tr><td><a href="http://www.makingmachinez.com/" target="_blank"><img src="images/title_makingmachinez.png" alt="http://www.makingmachinez.com/"></a></td></tr>
