--- a/responsive/demo/demo.html
+++ b/responsive/demo/demo.html
@@ -10,12 +10,12 @@
 <meta name="description" content="メディアクエリー(MediaQueries)で実装した、スマフォ対応、HTML5ワンソースマルチデバイステンプレートを公開しています。iPhone、Androidにも対応したフリックJS(jcflick)も公開しています。">
 <meta name="keywords" content="ワンソースマルチデバイス,メディアクエリ,メディアクエリー,mediaquery,MediaQueries,MediaQuery,jcflick,スマフォサイト,フリック,flick,iPhone,Android,HTML5,CSS3">
 
-<link rel="shortcut icon" href="../resources/images/favicon.ico">
+<link rel="shortcut icon" href="/public/resources/common/images/favicon.ico">
 
-<script type="text/javascript" src="../resources/js/jquery-1.6.4.min.js"></script>
-<script type="text/javascript" src="../resources/js/global.js"></script>
-<script type="text/javascript" src="../resources/js/jquery-megaDropdown.js"></script>
-<script type="text/javascript" src="../resources/js/jquery-jktab.js"></script>
+<script type="text/javascript" src="/public/resources/common/js/jquery-1.6.4.min.js"></script>
+<script type="text/javascript" src="/public/resources/common/js/global.js"></script>
+<script type="text/javascript" src="/public/resources/common/js/jquery-megaDropdown.js"></script>
+<script type="text/javascript" src="/public/resources/common/js/jquery-jktab.js"></script>
 <script type="text/javascript">
 (function(){
 	//Viewportの指定
@@ -35,24 +35,24 @@ $(function(){
 });
 </script>
 <!--[if IE 6]>
-<script type="text/javascript" src="../resources/js/DD_belatedPNG_0.0.8a-min.js"></script>
+<script type="text/javascript" src="/public/resources/common/js/DD_belatedPNG_0.0.8a-min.js"></script>
 <script type="text/javascript">
 	DD_belatedPNG.fix('img');
 </script>
 <![endif]-->
 
-<link rel="stylesheet" href="../resources/css/import_basic.css" media="all" type="text/css">
-<link rel="stylesheet" href="../resources/css/import_print.css" media="print" type="text/css">
+<link rel="stylesheet" href="/public/resources/common/css/import_basic.css" media="all" type="text/css">
+<link rel="stylesheet" href="/public/resources/common/css/import_print.css" media="print" type="text/css">
 
-<link rel="stylesheet" href="../resources/css/jquery-jcflick.css" media="all" type="text/css">
-<link rel="stylesheet" href="../resources/css/jquery-megaDropdown.css" media="all" type="text/css">
-<link rel="stylesheet" href="../resources/css/jquery-jktab.css" media="all" type="text/css">
+<link rel="stylesheet" href="/public/resources/common/css/jquery-jcflick.css" media="all" type="text/css">
+<link rel="stylesheet" href="/public/resources/common/css/jquery-megaDropdown.css" media="all" type="text/css">
+<link rel="stylesheet" href="/public/resources/common/css/jquery-jktab.css" media="all" type="text/css">
 
-<script type="text/javascript" src="../resources/js/jquery-jcflick.js"></script>
+<script type="text/javascript" src="/public/resources/common/js/jquery-jcflick.js"></script>
 
 <!-- Reference Only -->
-<link rel="stylesheet" href="../resources/etc/google-code-prettify/prettify.css" media="all" type="text/css">
-<script type="text/javascript" src="../resources/etc/google-code-prettify/prettify.js"></script>
+<link rel="stylesheet" href="/public/resources/common/etc/google-code-prettify/prettify.css" media="all" type="text/css">
+<script type="text/javascript" src="/public/resources/common/etc/google-code-prettify/prettify.js"></script>
 <script type="text/javascript">
 $(function(){ prettyPrint() });
 </script>
@@ -110,7 +110,7 @@ $(function(){
 <div id="globalContainer"><div id="globalContentsWrapper">
 	<h1 class="level1">Demo Page | MediaQueries Multi-Device Template.</h1>
 	<div id="globalHeader" class="group">
-	<div class="browser fFloL"><img src="../resources/images/browser.png" alt=""></div>
+	<div class="browser fFloL"><img src="/public/resources/common/images/browser.png" alt=""></div>
 	<p class="fFloR sTaC">ver 0.1β<br>2011/10/29</p>
 </div>
 <div id="socialButtons" class="group">
@@ -150,41 +150,41 @@ $(function(){
 <div id="globalNavi" class="megaDropdown group">
 	<ul class="navigation group gnaviParentCol">
 		<li>
-			<span class="title"><a href="../index.html"><span class="inner">MediaQueries Home</span></a></span>
+			<span class="title"><a href="/index.html"><span class="inner">MediaQueries Home</span></a></span>
 		</li>
 		<li>
-			<span class="title"><a href="./"><span class="inner">MediaQueries Demo</span></a></span>
+			<span class="title"><a href="/demo/"><span class="inner">MediaQueries Demo</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="demo.html">Demo Page</a></li>
+				<li><a href="/demo/demo.html">Demo Page</a></li>
 				<li><a href="https://github.com/funnythingz/mediaQueries" target="_blank">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="../doc/"><span class="inner">MediaQueries Doc</span></a></span>
+			<span class="title"><a href="/doc/"><span class="inner">MediaQueries Doc</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="../doc/module.html">Basic Module</a></li>
-				<li><a href="../doc/parts.html">Basic Parts</a></li>
-				<li><a href="../doc/class.html">Class Reference</a></li>
+				<li><a href="/doc/module.html">Basic Module</a></li>
+				<li><a href="/doc/parts.html">Basic Parts</a></li>
+				<li><a href="/doc/class.html">Class Reference</a></li>
 			</ul>
 		</li>
 		<li>
 			<span class="title"><a href="/js/jcflick/"><span class="inner">jQuery.jcflick</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="../jcflick/reference.html">Reference</a></li>
-				<li><a href="../jcflick/demo.html">Demo Page</a></li>
+				<li><a href="/js/jcflick/reference.html">Reference</a></li>
+				<li><a href="/js/jcflick/demo.html">Demo Page</a></li>
 				<li><a href="https://github.com/funnythingz/jcflick">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="../slideEffect/"><span class="inner">jQuery.slideEffect</span></a></span>
+			<span class="title"><a href="/js/slideEffect/"><span class="inner">jQuery.slideEffect</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="../slideEffect/reference.html">Reference</a></li>
-				<li><a href="../slideEffect/archive/jquery_slideEffect_0_0_1/demo.html">Demo Page</a></li>
+				<li><a href="/js/slideEffect/reference.html">Reference</a></li>
+				<li><a href="/js/slideEffect/archive/jquery_slideEffect_0_0_1/demo.html">Demo Page</a></li>
 				<li><a href="https://github.com/funnythingz/slideEffect" target="_blank">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="../about.html"><span class="inner">About</span></a></span>
+			<span class="title"><a href="/about.html"><span class="inner">About</span></a></span>
 		</li>
 	</ul>
 </div><!-- /#globalHeader -->
@@ -195,13 +195,13 @@ $(function(){
 			<!-- flick -->
 			<div class="flickContainer"><div class="flickWrapper group">
 				<div class="flickCol">
-					<p><a href="#"><img src="../resources/images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
+					<p><a href="#"><img src="/public/resources/common/images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
 				</div>
 				<div class="flickCol">
-					<p><a href="#"><img src="../resources/images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
+					<p><a href="#"><img src="/public/resources/common/images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
 				</div>
 				<div class="flickCol">
-					<p><a href="#"><img src="../resources/images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
+					<p><a href="#"><img src="/public/resources/common/images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
 				</div>
 			</div></div>
 			
@@ -242,13 +242,13 @@ $(function(){
 				<div class="group mb10">
 					<h1 class="level1">H1 title</h1>
 					<div class="pane2 floL group">
-						<p class="fFloLm sTaC"><img src="../resources/images/dummy_pict.gif" alt="dummy" width="100"></p>
+						<p class="fFloLm sTaC"><img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" width="100"></p>
 						<p class="fRect">
 							sample text. / sample text. / sample text. / <a href="#">sample text link</a>
 						</p>
 					</div>
 					<div class="pane2 floR group">
-						<p class="fFloLm sTaC"><img src="../resources/images/dummy_pict.gif" alt="dummy" width="100"></p>
+						<p class="fFloLm sTaC"><img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" width="100"></p>
 						<p class="fRect">
 							sample text. / sample text. / sample text. / <a href="#">sample text link</a>
 						</p>
@@ -257,13 +257,13 @@ $(function(){
 				
 				<div class="group mb10">
 					<div class="pane2 floL group">
-						<p class="floLm"><img src="../resources/images/dummy_pict.gif" alt="dummy" width="70"></p>
+						<p class="floLm"><img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" width="70"></p>
 						<p class="fRect">
 							sample text. / sample text. / sample text. / <a href="#">sample text link</a>
 						</p>
 					</div>
 					<div class="pane2 floR group">
-						<p class="floLm"><img src="../resources/images/dummy_pict.gif" alt="dummy" width="70"></p>
+						<p class="floLm"><img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" width="70"></p>
 						<p class="fRect">
 							sample text. / sample text. / sample text. / <a href="#">sample text link</a>
 						</p>
@@ -273,7 +273,7 @@ $(function(){
 				<div class="group">
 					<h2 class="level2">H2 title</h2>
 					<p class="fsL">
-						<img src="../resources/images/dummy_pict.gif" alt="dummy" class="sImage floLm">
+						<img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" class="sImage floLm">
 						sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / sample text. / <a href="#">sample text link</a>
 					</p>
 				</div>
@@ -287,14 +287,14 @@ $(function(){
 					<dl class="fPane2 fFloL over">
 						<dt class="fb">20XX-MM-DD</dt>
 						<dd class="group">
-							<img src="../resources/images/dummy_pict.gif" alt="dummy" class="floLm" width="60">
+							<img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" class="floLm" width="60">
 							<a href="#">News Text News Text News Text News Text News Text News Text News Text News Text News Text more...</a>
 						</dd>
 					</dl>
 					<dl class="fPane2 fFloR over">
 						<dt class="fb">20XX-MM-DD</dt>
 						<dd class="group">
-							<img src="../resources/images/dummy_pict.gif" alt="dummy" class="floLm" width="60">
+							<img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" class="floLm" width="60">
 							<a href="#">News Text News Text News Text News Text News Text News Text News Text News Text News Text more...</a>
 						</dd>
 					</dl>
@@ -333,7 +333,7 @@ $(function(){
 <div id="globalFooterContainer"><div id="footerInner">
 		<div class="section group">
 		<ul class="footerLink fFloL"><!--
-			--><li class="first-child"><a href="../index.html">Home</a></li><!--
+			--><li class="first-child"><a href="/index.html">Home</a></li><!--
 			--><li><a href="http://twitter.com/funnythingz">twitter</a></li><!--
 			--><li><a href="http://hiropo.co.uk">wordpress</a></li><!--
 		--></ul>
@@ -348,14 +348,14 @@ $(function(){
 			<ul class="footerEtcLink">
 				<li class="group">
 					<dl class="fPane2 fFloL over">
-						<dt class="fb"><a href="#"><img src="../resources/images/dummy_pict.gif" alt="dummy" class="floLm" width="60"></></dt>
+						<dt class="fb"><a href="#"><img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" class="floLm" width="60"></></dt>
 						<dd>
 							<a href="#">TitleName</a>
 							News Text News Text News Text News Text News Text News Text News Text News Text News Text
 						</dd>
 					</dl>
 					<dl class="fPane2 fFloR over">
-						<dt class="fb"><a href="#"><img src="../resources/images/dummy_pict.gif" alt="dummy" class="floLm" width="60"></></dt>
+						<dt class="fb"><a href="#"><img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" class="floLm" width="60"></></dt>
 						<dd>
 							<a href="#">TitleName</a>
 							News Text News Text News Text News Text News Text News Text News Text News Text News Text
@@ -364,14 +364,14 @@ $(function(){
 				</li>
 				<li class="group">
 					<dl class="fPane2 fFloL over">
-						<dt class="fb"><a href="#"><img src="../resources/images/dummy_pict.gif" alt="dummy" class="floLm" width="60"></></dt>
+						<dt class="fb"><a href="#"><img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" class="floLm" width="60"></></dt>
 						<dd>
 							<a href="#">TitleName</a>
 							News Text News Text News Text News Text News Text News Text News Text News Text News Text
 						</dd>
 					</dl>
 					<dl class="fPane2 fFloR over">
-						<dt class="fb"><a href="#"><img src="../resources/images/dummy_pict.gif" alt="dummy" class="floLm" width="60"></></dt>
+						<dt class="fb"><a href="#"><img src="/public/resources/common/images/dummy_pict.gif" alt="dummy" class="floLm" width="60"></></dt>
 						<dd>
 							<a href="#">TitleName</a>
 							News Text News Text News Text News Text News Text News Text News Text News Text News Text
