--- a/responsive/jcflick/reference.html
+++ b/responsive/jcflick/reference.html
@@ -84,7 +84,19 @@ $(function(){ prettyPrint() });
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
 
-<!--#include virtual="/public/resources/common/inc/ga.html" -->
+<script type="text/javascript">
+
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-1882060-11']);
+  _gaq.push(['_trackPageview']);
+
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+
+</script>
 </head>
 <body onLoad="ProjectName.PARTS.hideAdBar()" onOrientationChange="ProjectName.PARTS.hideAdBar()">
 
@@ -96,8 +108,82 @@ $(function(){ prettyPrint() });
 		<p class="fFloR sTaC">ver 0.0.6<br>Last Update 2012/05/31</p>
 	</div>
 	<div class="section">
-		<!--#include virtual="/public/resources/common/inc/sns.html" -->
-		<!--#include virtual="/public/resources/common/inc/megadropdown.html" -->
+		<div id="socialButtons" class="group">
+	<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+	<script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+	<!-- はてブ -->
+	<div class="socialbutton">
+	<a href="http://b.hatena.ne.jp/entry/" class="hatena-bookmark-button" data-hatena-bookmark-layout="standard" title="このエントリーをはてなブックマークに追加"><img src="http://b.st-hatena.com/images/entry-button/button-only.gif" alt="このエントリーをはてなブックマークに追加" width="20" height="20" style="border: none;" /></a><script type="text/javascript" src="http://b.st-hatena.com/js/bookmark_button.js" charset="utf-8" async="async"></script>
+	</div>
+	
+	<!-- twitter -->
+	<div class="socialbutton">
+		<a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="funnythingz">Tweet</a>
+	</div>
+	
+	<!-- G+ -->
+	<div class="socialbutton sNone">
+		<div id="googleplus">
+			<div class="g-plusone" data-size="medium" data-count="true"></div>
+		</div>
+	</div>
+	
+	<!-- FB -->
+	<div class="socialbutton sNone">
+		<div id="facebook_icon">
+			<div id="fb-root"></div>
+			<script src="http://connect.facebook.net/ja_JP/all.js#appId=210538342342854&xfbml=1"></script>
+			<script type="text/javascript">
+			(function(){
+				ProjectName.MOD.print_r('<fb:like href="'+ location.href +'" send="false" layout="button_count" width="110" show_faces="false" action="like" font=""></fb:like>');
+			})();
+			</script>
+		</div>
+	</div>
+	
+</div>
+		<div id="globalNavi" class="megaDropdown group">
+	<ul class="navigation group gnaviParentCol">
+		<li>
+			<span class="title"><a href="/index.html"><span class="inner">MediaQueries Home</span></a></span>
+		</li>
+		<li>
+			<span class="title"><a href="/demo/"><span class="inner">MediaQueries Demo</span></a></span>
+			<ul class="gnaviChildCol">
+				<li><a href="/demo/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/mediaQueries" target="_blank">Download</a></li>
+			</ul>
+		</li>
+		<li>
+			<span class="title"><a href="/doc/"><span class="inner">MediaQueries Doc</span></a></span>
+			<ul class="gnaviChildCol">
+				<li><a href="/doc/module.html">Basic Module</a></li>
+				<li><a href="/doc/parts.html">Basic Parts</a></li>
+				<li><a href="/doc/class.html">Class Reference</a></li>
+			</ul>
+		</li>
+		<li>
+			<span class="title"><a href="/js/jcflick/"><span class="inner">jQuery.jcflick</span></a></span>
+			<ul class="gnaviChildCol">
+				<li><a href="/js/jcflick/reference.html">Reference</a></li>
+				<li><a href="/js/jcflick/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/jcflick">Download</a></li>
+			</ul>
+		</li>
+		<li>
+			<span class="title"><a href="/js/slideEffect/"><span class="inner">jQuery.slideEffect</span></a></span>
+			<ul class="gnaviChildCol">
+				<li><a href="/js/slideEffect/reference.html">Reference</a></li>
+				<li><a href="/js/slideEffect/archive/jquery_slideEffect_0_0_1/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/slideEffect" target="_blank">Download</a></li>
+			</ul>
+		</li>
+		<li>
+			<span class="title"><a href="/about.html"><span class="inner">About</span></a></span>
+		</li>
+	</ul>
+</div><!-- /#globalHeader -->
+
 	</div>
 	
 	<h2 class="level2">仕様</h2>
@@ -465,7 +551,14 @@ $('#Element').jcflick({
 
 
 <div id="globalFooterContainer"><div id="footerInner">
-	<!--#include virtual="/public/resources/common/inc/footer_link.html" -->
+		<div class="section group">
+		<ul class="footerLink fFloL"><!--
+			--><li class="first-child"><a href="/index.html">Home</a></li><!--
+			--><li><a href="http://twitter.com/funnythingz">twitter</a></li><!--
+			--><li><a href="http://hiropo.co.uk">wordpress</a></li><!--
+		--></ul>
+		<p class="copyright">Copyright &copy; <a href="http://www.funnythingz.com" target="_blank">funnythingz</a></p>
+	</div>
 </div><!-- /#footerInner --></div><!-- /#globalFooterContainer -->
 
 
