--- a/responsive/about.html
+++ b/responsive/about.html
@@ -10,11 +10,11 @@
 <meta name="description" content="メディアクエリー(MediaQueries)で実装した、スマフォ対応、HTML5ワンソースマルチデバイステンプレートを公開しています。iPhone、Androidにも対応したフリックJS(jcflick)も公開しています。">
 <meta name="keywords" content="ワンソースマルチデバイス,メディアクエリ,メディアクエリー,mediaquery,MediaQueries,MediaQuery,jcflick,スマフォサイト,フリック,flick,iPhone,Android,HTML5,CSS3">
 
-<link rel="shortcut icon" href="/public/resources/common/images/favicon.ico">
+<link rel="shortcut icon" href="/responsive/resources/images/favicon.ico">
 
-<script type="text/javascript" src="/public/resources/common/js/jquery-1.6.4.min.js"></script>
-<script type="text/javascript" src="/public/resources/common/js/global.js"></script>
-<script type="text/javascript" src="/public/resources/common/js/jquery-megaDropdown.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/jquery-1.6.4.min.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/global.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/jquery-megaDropdown.js"></script>
 <script type="text/javascript">
 (function(){
 	//Viewportの指定
@@ -33,15 +33,15 @@ $(function(){
 });
 </script>
 <!--[if IE 6]>
-<script type="text/javascript" src="/public/resources/common/js/DD_belatedPNG_0.0.8a-min.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/DD_belatedPNG_0.0.8a-min.js"></script>
 <script type="text/javascript">
 	DD_belatedPNG.fix('img');
 </script>
 <![endif]-->
 
-<link rel="stylesheet" href="/public/resources/common/css/import_basic.css" media="all" type="text/css">
-<link rel="stylesheet" href="/public/resources/common/css/import_print.css" media="print" type="text/css">
-<link rel="stylesheet" href="/public/resources/common/css/jquery-megaDropdown.css" media="all" type="text/css">
+<link rel="stylesheet" href="/responsive/resources/css/import_basic.css" media="all" type="text/css">
+<link rel="stylesheet" href="/responsive/resources/css/import_print.css" media="print" type="text/css">
+<link rel="stylesheet" href="/responsive/resources/css/jquery-megaDropdown.css" media="all" type="text/css">
 
 <script type="text/javascript">
 
@@ -62,7 +62,7 @@ $(function(){
 <div id="globalContainer"><div id="globalContentsWrapper">
 	<h1 class="level1">About | MediaQueries Multi-Device Template.</h1>
 	<div id="globalHeader" class="group">
-	<div class="browser fFloL"><img src="/public/resources/common/images/browser.png" alt=""></div>
+	<div class="browser fFloL"><img src="/responsive/resources/images/browser.png" alt=""></div>
 	<p class="fFloR sTaC">ver 0.1β<br>2011/10/29</p>
 </div>
 <div id="socialButtons" class="group">
@@ -102,41 +102,41 @@ $(function(){
 <div id="globalNavi" class="megaDropdown group">
 	<ul class="navigation group gnaviParentCol">
 		<li>
-			<span class="title"><a href="/index.html"><span class="inner">MediaQueries Home</span></a></span>
+			<span class="title"><a href="/responsive/"><span class="inner">MediaQueries Home</span></a></span>
 		</li>
 		<li>
-			<span class="title"><a href="/demo/"><span class="inner">MediaQueries Demo</span></a></span>
+			<span class="title"><a href="/responsive/demo/"><span class="inner">MediaQueries Demo</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="/demo/demo.html">Demo Page</a></li>
-				<li><a href="https://github.com/funnythingz/mediaQueries" target="_blank">Download</a></li>
+				<li><a href="/responsive/demo/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/mediaQueries/archive/master.zip" target="_blank">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="/doc/"><span class="inner">MediaQueries Doc</span></a></span>
+			<span class="title"><a href="/responsive/doc/"><span class="inner">MediaQueries Doc</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="/doc/module.html">Basic Module</a></li>
-				<li><a href="/doc/parts.html">Basic Parts</a></li>
-				<li><a href="/doc/class.html">Class Reference</a></li>
+				<li><a href="/responsive/doc/module.html">Basic Module</a></li>
+				<li><a href="/responsive/doc/parts.html">Basic Parts</a></li>
+				<li><a href="/responsive/doc/class.html">Class Reference</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="/js/jcflick/"><span class="inner">jQuery.jcflick</span></a></span>
+			<span class="title"><a href="/responsive/jcflick/"><span class="inner">jQuery.jcflick</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="/js/jcflick/reference.html">Reference</a></li>
-				<li><a href="/js/jcflick/demo.html">Demo Page</a></li>
-				<li><a href="https://github.com/funnythingz/jcflick">Download</a></li>
+				<li><a href="/responsive/jcflick/reference.html">Reference</a></li>
+				<li><a href="/responsive/jcflick/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/jcflick/archive/master.zip">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="/js/slideEffect/"><span class="inner">jQuery.slideEffect</span></a></span>
+			<span class="title"><a href="/responsive/slideEffect/"><span class="inner">jQuery.slideEffect</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="/js/slideEffect/reference.html">Reference</a></li>
-				<li><a href="/js/slideEffect/archive/jquery_slideEffect_0_0_1/demo.html">Demo Page</a></li>
-				<li><a href="https://github.com/funnythingz/slideEffect" target="_blank">Download</a></li>
+				<li><a href="/responsive/slideEffect/reference.html">Reference</a></li>
+				<li><a href="/responsive/slideEffect/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/slideEffect/archive/master.zip" target="_blank">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="/about.html"><span class="inner">About</span></a></span>
+			<span class="title"><a href="/responsive/about.html"><span class="inner">About</span></a></span>
 		</li>
 	</ul>
 </div><!-- /#globalHeader -->
@@ -144,29 +144,17 @@ $(function(){
 	
 	<div class="section">
 		<h2 class="level2">Profile</h2>
-		<p>name: funnythingz<br>Web Developer です。マークアップしたりジャバスしたりしています。</p>
+		<p><strong class="fb">funnythingz</strong><br>Web Developer です。マークアップしたりジャバスしたりしています。</p>
 		<dl class="defDlList">
+			<dt>GitHub</dt>
+			<dd><a href="https://github.com/funnythingz" target="_blank">GitHub/funnythingz</a></dd>
 			<dt>www</dt>
-			<dd><a href="http://www.funnythingz.com" target="_blank">funnythingz</a></dd>
+			<dd><a href="http://www.funnythingz.com" target="_blank">funnythingz.com</a></dd>
 			<dt>Twitter</dt>
 			<dd><a href="http://twitter.com/funnythingz" target="_blank">@funnythingz</a></dd>
 			<dt>Blog</dt>
 			<dd><a href="http://hiropo.co.uk/" target="_blank">ひろぽっぽれす</a></dd>
 		</dl>
-		<h2 class="level2">Contact Twitter Form</h2>
-		<p>お問い合わせはTwitterからどうぞ。フォームつくるの間に合いませんでし(ry</p>
-		<div id="tbox"></div>
-		<script src="http://platform.twitter.com/anywhere.js?id=mq5Gu5E5cFTXTTxKLqc0Q&v=1" type="text/javascript"></script>
-		<script type="text/javascript">
-			twttr.anywhere(function (T) {
-				T("#tbox").tweetBox({
-					width: $('#globalContentsWrapper').width(),
-					label: 'Contact',
-					defaultContent: '@funnythingz '
-				});
-			});
-		</script>
-		
 	</div><!-- /.section -->
 		
 </div><!-- /#globalContentsWrapper --></div><!-- /#globalContainer -->
@@ -175,7 +163,7 @@ $(function(){
 <div id="globalFooterContainer"><div id="footerInner">
 		<div class="section group">
 		<ul class="footerLink fFloL"><!--
-			--><li class="first-child"><a href="/index.html">Home</a></li><!--
+			--><li class="first-child"><a href="/responsive/">Home</a></li><!--
 			--><li><a href="http://twitter.com/funnythingz">twitter</a></li><!--
 			--><li><a href="http://hiropo.co.uk">wordpress</a></li><!--
 		--></ul>
