--- a/responsive/jcflick/reference.html
+++ b/responsive/jcflick/reference.html
@@ -10,11 +10,11 @@
 <meta name="description" content="メディアクエリー(MediaQueries)で実装した、スマフォ対応、HTML5ワンソースマルチデバイステンプレートを公開しています。iPhone、Androidにも対応したフリックJS(jcflick)も公開しています。">
 <meta name="keywords" content="ワンソースマルチデバイス,メディアクエリ,メディアクエリー,mediaquery,MediaQueries,MediaQuery,jcflick,スマフォサイト,フリック,flick,iPhone,Android,HTML5,CSS3">
 
-<link rel="shortcut icon" href="/public/resources/common/images/favicon.ico">
+<link rel="shortcut icon" href="/responsive/resources/images/favicon.ico">
 
-<script type="text/javascript" src="/public/resources/common/js/jquery-1.7.2.min.js"></script>
-<script type="text/javascript" src="/public/resources/common/js/global.js"></script>
-<script type="text/javascript" src="/public/resources/common/js/jquery-megaDropdown.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/jquery-1.7.2.min.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/global.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/jquery-megaDropdown.js"></script>
 <script type="text/javascript">
 (function(){
 	//Viewportの指定
@@ -49,22 +49,22 @@ $(function(){
 });
 </script>
 <!--[if IE 6]>
-<script type="text/javascript" src="/public/resources/common/js/DD_belatedPNG_0.0.8a-min.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/DD_belatedPNG_0.0.8a-min.js"></script>
 <script type="text/javascript">
 	DD_belatedPNG.fix('img');
 </script>
 <![endif]-->
 
-<link rel="stylesheet" href="/public/resources/common/css/import_basic.css" media="all" type="text/css">
-<link rel="stylesheet" href="/public/resources/common/css/import_print.css" media="print" type="text/css">
-<link rel="stylesheet" href="/public/resources/common/css/jquery-megaDropdown.css" media="all" type="text/css">
-<link rel="stylesheet" href="/public/resources/common/css/jquery-jcflick.css" media="all" type="text/css">
+<link rel="stylesheet" href="/responsive/resources/css/import_basic.css" media="all" type="text/css">
+<link rel="stylesheet" href="/responsive/resources/css/import_print.css" media="print" type="text/css">
+<link rel="stylesheet" href="/responsive/resources/css/jquery-megaDropdown.css" media="all" type="text/css">
+<link rel="stylesheet" href="/responsive/resources/css/jquery-jcflick.css" media="all" type="text/css">
 
-<script type="text/javascript" src="/public/resources/common/js/jquery-jcflick-min.js"></script>
+<script type="text/javascript" src="/responsive/resources/js/jquery-jcflick-min.js"></script>
 
 <!-- Reference Only -->
-<link rel="stylesheet" href="/public/resources/common/etc/google-code-prettify/prettify.css" media="all" type="text/css">
-<script type="text/javascript" src="/public/resources/common/etc/google-code-prettify/prettify.js"></script>
+<link rel="stylesheet" href="/responsive/resources/etc/google-code-prettify/prettify.css" media="all" type="text/css">
+<script type="text/javascript" src="/responsive/resources/etc/google-code-prettify/prettify.js"></script>
 <script type="text/javascript">
 $(function(){ prettyPrint() });
 </script>
@@ -104,7 +104,7 @@ $(function(){ prettyPrint() });
 
 	<h1 class="level1">Reference | jQuery.jcflick</h1>
 	<div id="globalHeader" class="group">
-		<div class="browser fFloL"><img src="/public/resources/common/images/browser.png" alt=""></div>
+		<div class="browser fFloL"><img src="/responsive/resources/images/browser.png" alt=""></div>
 		<p class="fFloR sTaC">ver 0.0.6<br>Last Update 2012/05/31</p>
 	</div>
 	<div class="section">
@@ -145,41 +145,41 @@ $(function(){ prettyPrint() });
 		<div id="globalNavi" class="megaDropdown group">
 	<ul class="navigation group gnaviParentCol">
 		<li>
-			<span class="title"><a href="/index.html"><span class="inner">MediaQueries Home</span></a></span>
+			<span class="title"><a href="/responsive/"><span class="inner">MediaQueries Home</span></a></span>
 		</li>
 		<li>
-			<span class="title"><a href="/demo/"><span class="inner">MediaQueries Demo</span></a></span>
+			<span class="title"><a href="/responsive/demo/"><span class="inner">MediaQueries Demo</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="/demo/demo.html">Demo Page</a></li>
-				<li><a href="https://github.com/funnythingz/mediaQueries" target="_blank">Download</a></li>
+				<li><a href="/responsive/demo/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/mediaQueries/archive/master.zip" target="_blank">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="/doc/"><span class="inner">MediaQueries Doc</span></a></span>
+			<span class="title"><a href="/responsive/doc/"><span class="inner">MediaQueries Doc</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="/doc/module.html">Basic Module</a></li>
-				<li><a href="/doc/parts.html">Basic Parts</a></li>
-				<li><a href="/doc/class.html">Class Reference</a></li>
+				<li><a href="/responsive/doc/module.html">Basic Module</a></li>
+				<li><a href="/responsive/doc/parts.html">Basic Parts</a></li>
+				<li><a href="/responsive/doc/class.html">Class Reference</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="/js/jcflick/"><span class="inner">jQuery.jcflick</span></a></span>
+			<span class="title"><a href="/responsive/jcflick/"><span class="inner">jQuery.jcflick</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="/js/jcflick/reference.html">Reference</a></li>
-				<li><a href="/js/jcflick/demo.html">Demo Page</a></li>
-				<li><a href="https://github.com/funnythingz/jcflick">Download</a></li>
+				<li><a href="/responsive/jcflick/reference.html">Reference</a></li>
+				<li><a href="/responsive/jcflick/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/jcflick/archive/master.zip">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="/js/slideEffect/"><span class="inner">jQuery.slideEffect</span></a></span>
+			<span class="title"><a href="/responsive/slideEffect/"><span class="inner">jQuery.slideEffect</span></a></span>
 			<ul class="gnaviChildCol">
-				<li><a href="/js/slideEffect/reference.html">Reference</a></li>
-				<li><a href="/js/slideEffect/archive/jquery_slideEffect_0_0_1/demo.html">Demo Page</a></li>
-				<li><a href="https://github.com/funnythingz/slideEffect" target="_blank">Download</a></li>
+				<li><a href="/responsive/slideEffect/reference.html">Reference</a></li>
+				<li><a href="/responsive/slideEffect/demo.html">Demo Page</a></li>
+				<li><a href="https://github.com/funnythingz/slideEffect/archive/master.zip" target="_blank">Download</a></li>
 			</ul>
 		</li>
 		<li>
-			<span class="title"><a href="/about.html"><span class="inner">About</span></a></span>
+			<span class="title"><a href="/responsive/about.html"><span class="inner">About</span></a></span>
 		</li>
 	</ul>
 </div><!-- /#globalHeader -->
@@ -194,13 +194,13 @@ $(function(){ prettyPrint() });
 			<!-- flick -->
 			<div class="flickContainer"><div class="flickWrapper">
 				<div class="flickCol">
-					<p><a href="#"><img src="/public/resources/common/images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
+					<p><a href="#"><img src="/responsive/resources/images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
 				</div>
 				<div class="flickCol">
-					<p><a href="#"><img src="/public/resources/common/images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
+					<p><a href="#"><img src="/responsive/resources/images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
 				</div>
 				<div class="flickCol">
-					<p><a href="#"><img src="/public/resources/common/images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
+					<p><a href="#"><img src="/responsive/resources/images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
 				</div>
 			</div></div>
 			
@@ -217,9 +217,9 @@ $(function(){ prettyPrint() });
 <pre class="prettyprint">
 &lt;html lang=&quot;ja&quot;&gt;
 &lt;head&gt;
-&lt;link rel=&quot;stylesheet&quot; href=&quot;/public/resources/common/css/jquery-jcflick.css&quot; media=&quot;all&quot; type=&quot;text/css&quot;&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;/public/resources/common/js/jquery-1.7.2.min.js&quot;&gt;&lt;/script&gt;
-&lt;script type=&quot;text/javascript&quot; src=&quot;/public/resources/common/js/jquery-jcflick-min.js&quot;&gt;&lt;/script&gt;
+&lt;link rel=&quot;stylesheet&quot; href=&quot;/responsive/resources/css/jquery-jcflick.css&quot; media=&quot;all&quot; type=&quot;text/css&quot;&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;/responsive/resources/js/jquery-1.7.2.min.js&quot;&gt;&lt;/script&gt;
+&lt;script type=&quot;text/javascript&quot; src=&quot;/responsive/resources/js/jquery-jcflick-min.js&quot;&gt;&lt;/script&gt;
 &lt;script type=&quot;text/javascript&quot;&gt;
 $(function(){
 	$('#flickDemo').jcflick({
@@ -286,13 +286,13 @@ $(function(){
 				<!-- flick -->
 				<div class="flickContainer"><div class="flickWrapper">
 					<div class="flickCol">
-						<p><a href="#"><img src="/public/resources/common/images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
+						<p><a href="#"><img src="/responsive/resources/images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
 					</div>
 					<div class="flickCol">
-						<p><a href="#"><img src="/public/resources/common/images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
+						<p><a href="#"><img src="/responsive/resources/images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
 					</div>
 					<div class="flickCol">
-						<p><a href="#"><img src="/public/resources/common/images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
+						<p><a href="#"><img src="/responsive/resources/images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
 					</div>
 				</div></div>
 				
@@ -319,13 +319,13 @@ $(function(){
 	&lt;!-- flick --&gt;
 	&lt;div class=&quot;flickContainer&quot;&gt;&lt;div class=&quot;flickWrapper&quot;&gt;
 		&lt;div class=&quot;flickCol&quot;&gt;
-			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/public/resources/common/images/main_jcflick.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.jcflick&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/responsive/resources/images/main_jcflick.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.jcflick&quot;&gt;&lt;/a&gt;&lt;/p&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;flickCol&quot;&gt;
-			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/public/resources/common/images/main_slideEffect.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.slide-effect&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/responsive/resources/images/main_slideEffect.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.slide-effect&quot;&gt;&lt;/a&gt;&lt;/p&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;flickCol&quot;&gt;
-			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/public/resources/common/images/main_hogehoge.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.hogehoge&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/responsive/resources/images/main_hogehoge.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.hogehoge&quot;&gt;&lt;/a&gt;&lt;/p&gt;
 		&lt;/div&gt;
 	&lt;/div&gt;&lt;/div&gt;
 	
@@ -367,13 +367,13 @@ $(function(){
 				<!-- flick -->
 				<div class="flickContainer"><div class="flickWrapper">
 					<div class="flickCol">
-						<p><a href="#"><img src="/public/resources/common/images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
+						<p><a href="#"><img src="/responsive/resources/images/main_jcflick.png" width="100%" alt="jQuery.jcflick"></a></p>
 					</div>
 					<div class="flickCol">
-						<p><a href="#"><img src="/public/resources/common/images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
+						<p><a href="#"><img src="/responsive/resources/images/main_slideEffect.png" width="100%" alt="jQuery.slide-effect"></a></p>
 					</div>
 					<div class="flickCol">
-						<p><a href="#"><img src="/public/resources/common/images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
+						<p><a href="#"><img src="/responsive/resources/images/main_hogehoge.png" width="100%" alt="jQuery.hogehoge"></a></p>
 					</div>
 				</div></div>
 				
@@ -405,13 +405,13 @@ $(function(){
 	&lt;!-- flick --&gt;
 	&lt;div class=&quot;flickContainer&quot;&gt;&lt;div class=&quot;flickWrapper&quot;&gt;
 		&lt;div class=&quot;flickCol&quot;&gt;
-			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/public/resources/common/images/main_jcflick.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.jcflick&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/responsive/resources/images/main_jcflick.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.jcflick&quot;&gt;&lt;/a&gt;&lt;/p&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;flickCol&quot;&gt;
-			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/public/resources/common/images/main_slideEffect.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.slide-effect&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/responsive/resources/images/main_slideEffect.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.slide-effect&quot;&gt;&lt;/a&gt;&lt;/p&gt;
 		&lt;/div&gt;
 		&lt;div class=&quot;flickCol&quot;&gt;
-			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/public/resources/common/images/main_hogehoge.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.hogehoge&quot;&gt;&lt;/a&gt;&lt;/p&gt;
+			&lt;p&gt;&lt;a href=&quot;#&quot;&gt;&lt;img src=&quot;/responsive/resources/images/main_hogehoge.png&quot; width=&quot;100%&quot; alt=&quot;jQuery.hogehoge&quot;&gt;&lt;/a&gt;&lt;/p&gt;
 		&lt;/div&gt;
 	&lt;/div&gt;&lt;/div&gt;
 	
@@ -541,9 +541,9 @@ $('#Element').jcflick({
 
 	<div class="section">
 		<ul class="indentList">
-			<li class="fsXL"><a href="/js/jcflick/reference.html">＞ Reference</a></li>
-			<li class="fsXL"><a href="/js/jcflick/demo.html">＞ Demo Page</a></li>
-			<li class="fsXL"><a href="https://github.com/funnythingz/jcflick" target="_blank">＞ Download</a></li>
+			<li class="fsXL"><a href="/responsive/jcflick/reference.html">＞ Reference</a></li>
+			<li class="fsXL"><a href="/responsive/jcflick/demo.html">＞ Demo Page</a></li>
+			<li class="fsXL"><a href="https://github.com/funnythingz/jcflick/archive/master.zip" target="_blank">＞ Download</a></li>
 		</ul>
 	</div>
 
@@ -553,7 +553,7 @@ $('#Element').jcflick({
 <div id="globalFooterContainer"><div id="footerInner">
 		<div class="section group">
 		<ul class="footerLink fFloL"><!--
-			--><li class="first-child"><a href="/index.html">Home</a></li><!--
+			--><li class="first-child"><a href="/responsive/">Home</a></li><!--
 			--><li><a href="http://twitter.com/funnythingz">twitter</a></li><!--
 			--><li><a href="http://hiropo.co.uk">wordpress</a></li><!--
 		--></ul>
