--- a/2ch/index.html
+++ b/2ch/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 
-<link rel="canonical" href="http://funnythingz.com/2ch/">
+<link rel="canonical" href="http://www.funnythingz.com/2ch/">
 
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width">
@@ -11,7 +11,7 @@
 
 <meta property="og:title" content="2ちゃんねるまとめのまとめ">
 <meta property="og:type" content="article">
-<meta property="og:url" content="http://funnythingz.com/2ch/">
+<meta property="og:url" content="http://www.funnythingz.com/2ch/">
 <meta property="og:image" content="">
 <meta property="og:site_name" content="2ちゃんねるまとめのまとめ">
 <meta property="og:description" content="2ちゃんねるまとめをまとめてみた">
@@ -23,7 +23,7 @@
 </head>
 <body>
 
-<h1>2ちゃんねる(2ch)まとめのまとめ</h1>
+<h1># 2ちゃんねる(2ch)まとめのまとめ</h1>
 
 <script type="text/javascript"><!--
 google_ad_client = "ca-pub-8570723468408214";
