--- a/2ch/index.html
+++ b/2ch/index.html
@@ -46,7 +46,7 @@ google_ad_height = 15;
         feedControl.setNumEntries(7);
         feedControl.addFeed( 'http://blog.livedoor.jp/dqnplus/atom.xml', '痛いニュース' );
         feedControl.addFeed( 'http://hamusoku.com/atom.xml', 'ハム速' );
-        feedControl.addFeed( 'http://pokesoku.jp/atom.xml', 'ポケモン速報' );
+        feedControl.addFeed( 'http://lifehack2ch.livedoor.biz/atom.xml', 'lifehack2ch' );
         feedControl.addFeed( 'http://onesoku.com/atom.xml', 'ONE PIECE速報' );
         feedControl.addFeed( 'http://blog.livedoor.jp/itsoku/atom.xml', 'IT速報' );
         feedControl.addFeed( 'http://repsoku.net/atom.xml', 'リプライ速報' );
