--- a/2ch/index.html
+++ b/2ch/index.html
@@ -49,6 +49,7 @@ google_ad_height = 15;
         feedControl.addFeed('http://lifehack2ch.livedoor.biz/atom.xml', 'lifehack2ch');
         feedControl.addFeed('http://onesoku.com/atom.xml', 'ONE PIECE速報');
         feedControl.addFeed('http://blog.livedoor.jp/itsoku/atom.xml', 'IT速報');
+        feedControl.addFeed('http://kabumatome.doorblog.jp/atom.xml', '市況かぶ全力２階建');
         feedControl.addFeed('http://repsoku.net/atom.xml', 'リプライ速報');
         feedControl.addFeed('http://oryouri.2chblog.jp/atom.xml', 'お料理速報');
         feedControl.addFeed('http://hijikisokuhou.doorblog.jp/atom.xml', 'ゆるりとひじき速報');
