--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <link rel="shortcut icon" href="/favicon.ico">
 <link rel="stylesheet" href="jquery-jcflick.css" media="all" type="text/css">
+<link rel="stylesheet" href="funnythingz.css" media="all" type="text/css">
 
 <title>funnythingz</title>
 
@@ -30,37 +31,7 @@ $(function(){
 	});
 });
 </script>
-<style type="text/css">
-* {
-	margin: 0;
-	padding: 0;
-}
-img {
-	border: 0 none;
-	vertical-align: bottom;
-}
-table {
-	border-collapse: collapse;
-	border: 0 none;
-}
-table tr td {
-	text-align: center;
-	vertical-align: middle;
-}
-#funnythingz    td {background: url(images/bg_funnythingz.png) no-repeat right center;}
-#hiropocouk     td {background: url(images/bg_hiropocouk.png) no-repeat left center;}
-#mediaqueries   td {background: url(images/bg_mediaqueries.png) no-repeat right center;}
-#makingmachinez td {background: url(images/bg_makingmachinez.png) no-repeat right bottom;}
-#hackleberryme  td {background: url(images/bg_hackleberryme.png) no-repeat left bottom;}
 
-.section {
-	background: url(images/bg_left.png) no-repeat left center;
-}
-#fuck {
-	background: url(images/bg_right.png) no-repeat right center;
-}
-
-</style>
 </head>
 <body>
 
