--- a/responsive/jcflick/index.html
+++ b/responsive/jcflick/index.html
@@ -109,7 +109,7 @@ $(function(){
 			<span class="title"><a href="/responsive/demo/"><span class="inner">MediaQueries Demo</span></a></span>
 			<ul class="gnaviChildCol">
 				<li><a href="/responsive/demo/demo.html">Demo Page</a></li>
-				<li><a href="https://github.com/funnythingz/mediaQueries/archive/master.zip" target="_blank">Download</a></li>
+				<li><a href="https://github.com/funnythingz/mediaQueries/archive/v0.1.zip" target="_blank">Download</a></li>
 			</ul>
 		</li>
 		<li>
